--- a/buildspec.yml
+++ b/buildspec.yml
@@ -2,6 +2,7 @@ version: 0.1
 phases:
   install:
     commands:
+      - node -v
       - npm install serverless -g
       - npm install serverless-sam --save-dev
       - serverless sam export --output ./samTemplate.yaml
