--- a/buildspec.yml
+++ b/buildspec.yml
@@ -3,8 +3,8 @@ phases:
   install:
     commands:
       - node -v
-      - npm install serverless -g
-      - npm install serverless-sam --save-dev
+      - npm install serverless
+      - npm install serverless-sam
       - serverless sam export --output ./samTemplate.yaml
       - aws cloudformation package --template-file samTemplate.yaml --s3-bucket homex-lambda-pipeline --output-template-file outputSamTemplate.yaml
 artifacts:
