--- a/buildspec.yml
+++ b/buildspec.yml
@@ -2,9 +2,9 @@ version: 0.1
 phases:
   install:
     commands:
-      - node -v
-      - npm install serverless
-      - npm install serverless-sam
+      - npm cache clear
+      - npm install serverless -g
+      - npm install serverless-sam --save-dev
       - serverless sam export --output ./samTemplate.yaml
       - aws cloudformation package --template-file samTemplate.yaml --s3-bucket homex-lambda-pipeline --output-template-file outputSamTemplate.yaml
 artifacts:
