--- a/serverless.yml
+++ b/serverless.yml
@@ -14,6 +14,6 @@ functions:
     handler: handler.hello
     events:
       - http:
-          path: /hello/
+          path: /
           method: ANY
           cors: true
