--- a/buildspec.yml
+++ b/buildspec.yml
@@ -5,8 +5,7 @@ phases:
       - npm install serverless -g
       - npm install serverless-sam --save-dev
       - serverless sam export --output ./samTemplate.yaml
-      - ls -la
-      - aws cloudformation package --template-file samTemplate.yaml --s3-bucket homex-lambda-pipeline --output-template-file outputSamTemplate.yaml
+      - aws cloudformation package --template-file samTemplate.yaml --s3-bucket saugata-lambda-pipeline --output-template-file outputSamTemplate.yaml
 artifacts:
   type: zip
   files:
