--- a/serverless.yml
+++ b/serverless.yml
@@ -14,6 +14,6 @@ functions:
     handler: handler.hello
     events:
       - http:
-          path: /
-          method: ANY
+          path: /hello
+          method: get
           cors: true
